fixed json fields: snake_case
