# docs/swagger.json
@@ -443,8 +443,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/auth.TokenPair"
                         }
@@ -495,7 +495,7 @@
                         }
                     }
                 },
-                "currentPlayerID": {
+                "current_player_id": {
                     "description": "user ID of the player whose turn it is",
                     "type": "string"
                 },
@@ -512,13 +512,13 @@
                 "status": {
                     "$ref": "#/definitions/game.GameStatus"
                 },
-                "userID1": {
+                "user_id1": {
                     "type": "string"
                 },
-                "userID2": {
+                "user_id2": {
                     "type": "string"
                 },
-                "winnerID": {
+                "winner_id": {
                     "type": "string"
                 }
             }
@@ -606,7 +606,7 @@
         "server.GiveUpRequest": {
             "type": "object",
             "properties": {
-                "gameID": {
+                "game_id": {
                     "type": "string"
                 }
             }
@@ -614,7 +614,7 @@
         "server.JoinGameRequest": {
             "type": "object",
             "properties": {
-                "gameID": {
+                "game_id": {
                     "type": "string"
                 }
             }
@@ -622,7 +622,7 @@
         "server.MoveRequest": {
             "type": "object",
             "properties": {
-                "gameID": {
+                "game_id": {
                     "type": "string"
                 },
                 "x": {
@@ -639,7 +639,7 @@
                 "password": {
                     "type": "string"
                 },
-                "userID": {
+                "user_id": {
                     "type": "string"
                 }
             }
@@ -647,10 +647,10 @@
         "server.UserRefreshTokenRequest": {
             "type": "object",
             "properties": {
-                "refreshToken": {
+                "refresh_token": {
                     "type": "string"
                 },
-                "userID": {
+                "user_id": {
                     "type": "string"
                 }
             }
@@ -661,7 +661,7 @@
                 "password": {
                     "type": "string"
                 },
-                "userID": {
+                "user_id": {
                     "type": "string"
                 }
             }
